# examples

./: .gitignore  README.md  output.txt
check-secret-noir/: .gitignore  Cargo.toml  README.md  build.rs
check-secret-noir/contract/: .gitignore  Nargo.toml  Prover.toml
check-secret-noir/contract/src/: main.nr
check-secret-noir/data/: noir-proof-382d501b457733459ccfd3d15d792023  noir-vk-382d501b457733459ccfd3d15d792023
check-secret-noir/frontend/: README.md  bun.lockb  index.html  index.ts  lib.ts  model.ts  package.json  tsconfig.json  vite.config.js
check-secret-noir/src/: main.rs
collatz-conjecture-rust/: .gitignore  Cargo.toml  README.md  build.rs
collatz-conjecture-rust/src/: contract.rs
collatz-sp1-prover-main/: .gitignore
collatz-sp1-prover-main/program/: Cargo.toml
collatz-sp1-prover-main/program/src/: main.rs
collatz-sp1-prover-main/script/: Cargo.toml
collatz-sp1-prover-main/script/src/: main.rs
data/data_availability.db/partitions/blocks_by_hash/: config
erc20/rust/: Cargo.toml  README.md  build.sh  erc20.risc0.proof  proof.json
erc20/rust/host/: Cargo.toml
erc20/rust/host/src/: main.rs
erc20/rust/methods/: Cargo.toml
erc20/rust/methods/guest/: Cargo.toml
erc20/rust/methods/guest/src/: main.rs
erc20/rust/utils/: Cargo.toml
erc20/rust/utils/src/: lib.rs
ethereum-signature-verification/: .gitignore  Scarb.toml
ethereum-signature-verification/src/: lib.cairo
fibonacci/: README.md
fibonacci/cairo/: .gitignore  README.md  Scarb.toml  generate_cairo_output.sh
fibonacci/cairo/src/: lib.cairo
fibonacci/noir/: .gitignore  README.md
fibonacci/noir/prover/: README.md  package.json  prover.ts  verify.ts
fibonacci/noir/src/: main.nr
fibonacci/rust/: .gitignore  Cargo.toml  README.md  build.sh
fibonacci/rust/host/: Cargo.toml
fibonacci/rust/host/src/: main.rs
fibonacci/rust/methods/: Cargo.toml
fibonacci/rust/methods/rust-fibonacci/: Cargo.toml
fibonacci/rust/methods/rust-fibonacci/src/: main.rs
groth16-example-main/: .gitignore  full_circuit.go  go.mod  go.sum  main.go  simple_circuit.go
identity-WebAuthn/contract/: Cargo.toml
identity-WebAuthn/contract/src/: lib.rs
identity-WebAuthn/host/: Cargo.toml
identity-WebAuthn/host/src/: main.rs
identity-WebAuthn/methods/guest/: Cargo.toml
identity-WebAuthn/methods/guest/src/: main.rs
metamask-identity/: readme.md
metamask-identity/hyle-snap/: README.md  package.json
metamask-identity/metamask-contract/: Cargo.toml  README.md  register-identity.sh
metamask-identity/metamask-contract/contract/: Cargo.toml
metamask-identity/metamask-contract/contract/src/: lib.rs
metamask-identity/metamask-contract/host/: Cargo.toml
metamask-identity/metamask-contract/host/src/: main.rs
metamask-identity/metamask-contract/methods/guest/: Cargo.toml
metamask-identity/metamask-contract/methods/guest/src/: main.rs
simple-amm/: Cargo.toml
simple-amm/contract/: Cargo.toml
simple-amm/contract/src/: lib.rs
simple-amm/host/: Cargo.toml
simple-amm/host/src/: main.rs
simple-amm/methods/: Cargo.toml
simple-amm/methods/guest/: Cargo.toml
simple-amm/methods/guest/src/: main.rs
simple-erc20/: README.md
simple-erc20/contract/: Cargo.toml
simple-erc20/host/: Cargo.toml
simple-erc20/host/src/: main.rs
simple-erc20/methods/guest/: Cargo.toml
simple-erc20/methods/guest/src/: main.rs
simple-identity/: Cargo.toml  README.md
simple-identity-sp1/: Cargo.toml  README.md
simple-identity-sp1/lib/: Cargo.toml
simple-identity-sp1/lib/src/: lib.rs
simple-identity-sp1/program/: Cargo.toml
simple-identity-sp1/program/src/: main.rs
simple-identity-sp1/script/: Cargo.toml  build.rs
simple-identity/contract/: Cargo.toml
simple-identity/contract/src/: client.rs  lib.rs
simple-identity/host/: Cargo.toml
simple-identity/host/src/: init.rs  main.rs  prover.rs
simple-identity/methods/: Cargo.toml  build.rs
simple-identity/methods/guest/: Cargo.toml  guest.img  guest.txt
simple-identity/methods/guest/src/: main.rs
simple-token/: Cargo.toml  README.md
simple-token-noir/: Cargo.toml
simple-token-noir/contract/: Nargo.toml  Prover.toml
simple-token-noir/contract/proofs/: proof  proof_fields.json
simple-token-noir/contract/src/: main.nr
simple-token-noir/src/: main.rs
simple-token-sp1/: Cargo.toml  README.md
simple-token-sp1/elf/: riscv32im-succinct-zkvm-elf
simple-token-sp1/lib/: Cargo.toml
simple-token-sp1/lib/src/: lib.rs
simple-token-sp1/program/: Cargo.toml
simple-token-sp1/program/src/: main.rs
simple-token-sp1/script/: Cargo.toml  build.rs  proof_tx.json
simple-token/contract/: Cargo.toml
simple-token/contract/src/: lib.rs
simple-token/host/: Cargo.toml
simple-token/host/src/: main.rs
simple-token/methods/guest/: Cargo.toml
simple-token/methods/guest/src/: main.rs
simple_token_sp1/: README.md
simple_token_sp1/elf/: riscv32im-succinct-zkvm-elf
ticket-app/: Cargo.toml  README.md
ticket-app/contract/: Cargo.toml
ticket-app/contract/src/: lib.rs
ticket-app/host/: Cargo.toml
ticket-app/host/src/: main.rs
ticket-app/methods/: Cargo.toml
ticket-app/methods/guest/: Cargo.toml
ticket-app/methods/guest/src/: main.rs
