[package]
name = "simple-token-noir"
version = "0.1.0"
edition = "2021"

[dependencies]

sdk = { path = "../../hyle/crates/contract-sdk", package = "hyle-contract-sdk" }
client-sdk = { path = "../../hyle/crates/client-sdk", package = "hyle-client-sdk", features=["rest"] }

clap = { version = "4.4", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
borsh = "1.3"
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lazy_static = "1.4"
toml = "0.8"
