[workspace]
members = [
    "lib",
    "program",
    "script",
]
resolver = "2"

[workspace.dependencies]
sdk = { git = "https://github.com/hyle-org/hyle", package = "hyle-contract-sdk", branch = "main" }
client-sdk = { git = "https://github.com/hyle-org/hyle", package = "client-sdk", branch = "main" }



