[workspace]
members = [
    "lib",
    "program",
    "script",
]
resolver = "2"

[workspace.dependencies]
sdk = { git = "https://github.com/hyle-org/hyle", package = "hyle-contract-sdk", tag = "v0.9.0" }
client-sdk = { git = "https://github.com/hyle-org/hyle", package = "client-sdk", tag = "v0.9.0" }



