[workspace]
[package]
version = "0.1.0"
name = "sp1-verifier-program"
edition = "2021"

[dependencies]
serde = "1.0.201"
hyle_contract = { git = "https://github.com/hyle-org/hyle-risc-zero-verifier.git", branch = "main" }
sp1-zkvm = { git = "https://github.com/succinctlabs/sp1.git", rev = "df9a346"  }
