[workspace]
[package]
version = "0.1.0"
name = "sp1-prover"
edition = "2021"

[dependencies]
bincode = "1.3.3"
serde = "1.0.201"
base64 = "0.22.1"
sp1-sdk = { git = "https://github.com/succinctlabs/sp1.git", rev = "df9a346"  }
sp1-core = { git = "https://github.com/succinctlabs/sp1.git", rev = "df9a346"  }
hyle_contract = { git = "https://github.com/hyle-org/hyle-risc-zero-verifier.git", branch = "main" }
serde_json = "1.0.117"
clap = { version = "4.4.17", features = ["derive"] }

[build-dependencies]
sp1-helper = { git = "https://github.com/succinctlabs/sp1.git", rev = "df9a346"  }
