[package]
version = "0.1.0"
name = "script"
edition = "2021"
default-run = "script"

[[bin]]
name = "script"
path = "src/bin/main.rs"

[dependencies]
sp1-sdk = "4.0.0-rc.8"

sdk = { workspace = true }
contract = { path = "../lib", package = "contract"}

client-sdk = { git = "https://github.com/hyle-org/hyle", package = "client-sdk", features = ["sp1"], branch = "sp1_4_0_0"  }
hyle = { git = "https://github.com/hyle-org/hyle", default-features = false, package = "hyle", branch = "sp1_4_0_0"  }

tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = "1.0"
serde_json = "1.0.133"
clap = { version = "4.5.23", features = ["derive"] }
bincode = { version = "1.3.3" }
hex = "0.4.3"
anyhow = "1.0.95"
tokio = { version = "1.42.0", features = ["full", "tracing"] }
reqwest = "0.12.9"
borsh = "1.5.3"

[build-dependencies]
sp1-helper = "3.4.0"
