[package]
version = "0.1.0"
name = "script"
edition = "2021"
default-run = "script"

[[bin]]
name = "script"
path = "src/bin/main.rs"

[dependencies]
sp1-sdk = "4.0.0"

sdk = { workspace = true }
client-sdk = { workspace = true, features = ["sp1", "rest"] }

contract = { path = "../lib", package = "contract"}


tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde_json = "1.0.133"
clap = { version = "4.5.23", features = ["derive"] }
anyhow = "1.0.95"
tokio = { version = "1.42.0", features = ["full", "tracing"] }

[build-dependencies]
sp1-helper = "3.4.0"
