[package]
name = "contract-ticket-app"
version = "0.1.0"
edition = "2021"

[dependencies]
sdk = { workspace = true }
simple-token = { path = "../../simple-token/contract", package = "contract"}

serde = { version = "1.0", default-features = false, features = [
    "derive",
    "alloc",
] }
borsh = "1.5.5"
