[package]
name = "host-ticket-app"
version = "0.1.0"
edition = "2021"

[dependencies]
sdk = { git = "https://github.com/hyle-org/hyle", package = "hyle-contract-sdk", branch="main" }
client-sdk = { git = "https://github.com/hyle-org/hyle", package = "client-sdk", features = ["risc0", "rest"], branch="main" }
contract-ticket-app = { path = "../contract", package = "contract-ticket-app"}
contract-identity = { path = "../../simple-identity/contract"}
contract = { path = "../../simple-token/contract", package = "contract"}

methods-identity = { path = "../../simple-identity/methods" }
methods-ticket-app = { path = "../methods" }
methods = { path = "../../simple-token/methods" }
risc0-zkvm = { version = "1.2.0" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = "1.0"
serde_json = "1.0.133"
clap = { version = "4.5.23", features = ["derive"] }
bincode = { version = "2.0.0-rc.3" }
hex = "0.4.3"
anyhow = "1.0.95"
tokio = { version = "1.42.0", features = ["full", "tracing"] }
reqwest = "0.12.9"
borsh = "1.5.3"
