[package]
name = "host-ticket-app"
version = "0.1.0"
edition = "2021"

[dependencies]
sdk = { workspace = true }
client-sdk = { workspace = true, features = ["rest", "risc0"] }
contract-ticket-app = { path = "../contract", package = "contract-ticket-app"}
contract-identity = { path = "../../simple-identity/contract"}
contract = { path = "../../simple-token/contract", package = "contract"}

methods-identity = { path = "../../simple-identity/methods" }
methods-ticket-app = { path = "../methods" }
methods = { path = "../../simple-token/methods" }

tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4.5.23", features = ["derive"] }
borsh = "1.5.5"
anyhow = "1.0.95"
tokio = { version = "1.42.0", features = ["full", "tracing"] }
