[package]
name = "host"
version = "0.1.0"
edition = "2021"

[dependencies]
hyle_contract = { git = "https://github.com/hyle-org/hyle-cosmos.git", branch = "main" }
methods = { path = "../methods" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
risc0-zkvm = { version = "1.1.1" }
env_logger = "0.10"
serde = { version = "1.0", default-features = false, features = [
    "derive",
    "alloc",
] }
serde_json = "1.0.111"
clap = { version = "4.4.17", features = ["derive"] }
base64 = "0.22.1"
utils = { path = "../utils" }
hex = "0.4.3"
