[package]
name = "host"
version = "0.1.0"
edition = "2021"

[dependencies]
methods = { path = "../methods" }
sdk = { git = "https://github.com/Hyle-org/hyle.git", package = "sdk", branch = "sdk" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
risc0-zkvm = { version = "1.1.1" }
env_logger = "0.10"
serde = { version = "1.0", default-features = false, features = [
    "derive",
    "alloc",
] }
clap = { version = "4.4.17", features = ["derive"] }
base64 = "0.22.1"
utils = { path = "../utils" }
hex = "0.4.3"
borsh = "1.5.1"
reqwest = "0.12.8"
anyhow = "1.0.89"
serde_json = "1.0.128"
