[package]
name = "host"
version = "0.1.0"
edition = "2021"

[dependencies]
sdk = { workspace = true }
client-sdk = { workspace = true, features = ["rest", "risc0"] }
contract-identity = { path = "../contract" }

# hyle = { git = "https://github.com/hyle-org/hyle", branch = "generic_tx_builder", package = "hyle" }
methods-identity = { path = "../methods" }
risc0-zkvm = { version = "1.2.0" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = "1.0"
serde_json = "1.0.133"
clap = { version = "4.5.23", features = ["derive"] }
bincode = { version = "2.0.0-rc.3" }
hex = "0.4.3"
anyhow = "1.0.95"
tokio = { version = "1.42.0", features = ["full", "tracing"] }
reqwest = "0.12.9"
borsh = "1.5.3"
secp256k1 = {version = "0.28.2", features=["recovery"]}
rand ="0.8"
ethers = "2.0.14"
axum = "0.8.1"
tower-http = { version = "0.6.2", features = ["cors"] }
tiny-keccak = { git = "https://github.com/risc0/tiny-keccak", tag = "tiny-keccak/v2.0.2-risczero.0", features=["keccak"]}
hex-literal = "0.4"
sha3 = { git = "https://github.com/risc0/RustCrypto-hashes" }
k256 = "0.13.4"
