[package]
name = "guest"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
sdk = { git = "https://github.com/hyle-org/hyle", package = "hyle-contract-sdk", features = ["risc0"], tag = "v0.13.0-rc.1" }
contract = { path = "../../contract", package = "contract"}

risc0-zkvm = { version = "1.2.5", default-features = false, features = ['std'] }
